Further debuggin of layout bugs.

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -6,7 +6,7 @@ html, body {
 
 body {
 	padding-top: 80px;
-	font-family:  'Arial', Helvetica, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 	color: #333;
 	margin: 0;
 	box-sizing: border-box;
@@ -34,6 +34,16 @@ body {
     flex: none;
 }
 
+input, button, select, textarea {
+	font-family: inherit;
+	font-size: inherit;
+	-webkit-padding: 0.4em 0;
+	padding: 0.4em;
+	margin: 0 0 0.5em 0;
+	box-sizing: border-box;
+	border: 1px solid #ccc;
+	border-radius: 2px;
+}
 
 a {
 	color: rgb(0,100,200);
@@ -54,6 +64,10 @@ label {
 
 input:disabled {
 	color: #ccc;
+}
+
+button {
+	outline: none;
 }
 
 .legal p {
